--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,11 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
-	}
+		"strict": true,
+		"types": ["@types/jest", "@types/node"],
+		"moduleResolution": "node"
+	},
+	"include": ["src/**/*", "tests/**/*.ts"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
