--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@types/jest": "^29.5.1",
 		"@types/node": "^18.16.0",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.23",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0",
