--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,9 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Pull Vercel info
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
